# capri-ordering-system

./: .env.example  .gitignore  ARCHITECTURE.md  PROJECT_SPEC.md  README.md  TASKS.md
backend/: pyproject.toml
backend/app/: config.py  customers.py  db.py  main.py  menu.py  models.py  order_engine.py  schemas.py
backend/app/data/: customers.json  menu.json
backend/app/llm/: __init__.py  base.py  cerebras_provider.py  mock_provider.py  openrouter_provider.py  prompts.py
backend/app/services/: logging_service.py  validation_service.py
backend/scripts/: seed_db.py
frontend/: index.html  package.json
frontend/src/: App.tsx  api.ts  styles.css
frontend/src/components/: ConversationPanel.tsx  DebugPanel.tsx  InputPanel.tsx  MenuPanel.tsx  OrderPanel.tsx
